# squander

./: .gitignore  README.md  prices.yaml  pyproject.toml
.github/workflows/: test.yml
src/squander/: __init__.py  cli.py  parser.py  pricing.py  sessions.py
src/squander/detectors/: __init__.py  context_resend.py
tests/: test_cli.py  test_context_resend.py  test_parser.py  test_pricing.py  test_sessions.py
tests/fixtures/: sample_session.jsonl
